--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="jumbotron opacity-3 py-2 mt-5">
       <h1 class="display-2 text-center m-5 ">Pizzeria za Rogiem</h1>
     </div>
-    <div class="main-form jumbotron form-group">
+    <div class="jumbotron form-group">
       <h2 class="display-4">Złoż swoje zamówienie</h2>
       <h5 class="mt-5 mb-3">Dane zamawiającego</h5>
       <label for="name" class="form-text">Imię i Nazwisko</label>
@@ -22,7 +22,7 @@
       <input type="text" name="phone" class="form-control">
       <h5 class="mt-5 mb-3">Adres dostawy</h5>
       <label for="adress-street">Ulica</label>
-      <input type="text" name="addres-street" class="form-control"v>
+      <input type="text" name="addres-street" class="form-control">
       <label for="adress-house">Numer domu / mieszkania</label>
       <input type="text" name="addres-house" class="form-control">
       <label for="adress-code">Kod pocztowy</label>
