--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         />
         <link rel="stylesheet" href="style.css" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </head>
     <body>
         <div class="main container">
@@ -67,7 +68,7 @@
                     <option value="capriciosa">Capriciosa</option>
                     <option value="prosciutto">Prosciutto</option>
                     <option value="salami">Salami</option>
-                    <option value="frutti di mare">Frutti Di Mare</option>
+                    <option value="fruttiDiMare">Frutti Di Mare</option>
                 </select>
 
                 <p class="mt-3 mb-1">Wybierz sosy</p>
@@ -119,6 +120,40 @@
             </div>
         </div>
 
+        <div class="container">
+  <h2>Activate Modal with JavaScript</h2>
+  <!-- Trigger the modal with a button -->
+  <button type="button" class="btn btn-info btn-lg" id="myBtn">Open Modal</button>
+
+  <!-- Modal -->
+  <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+    
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Modal Header</h4>
+        </div>
+        <div class="modal-body">
+          <p>Some text in the modal.</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+      
+    </div>
+  </div>
+  
+</div>
+        <script>
+$(document).ready(function(){
+  $("#myBtn").click(function(){
+    $("#myModal").modal();
+  });
+});
+</script>
         <script src="main.js"></script>
     </body>
 </html>
